tempfile/derive_more/tests/compile_fail/into/enum.rs
#[derive(derive_more::Into)]
enum Foo {
    Foo(i32),
}

fn main() {}
